# api_brm_whatsapp

./: .env  .gitignore  dockerfile  pyproject.toml  requirements.txt  temporal_worker.py  whatsapp_api_documentation.md
app/: celery_worker.py  main.py  teste.py
app/api/endpoints/: empresa.py  mensagem.py  relatorio.py  whatsapp.py
app/config/: config.py
app/core/: logs.py  mongo.py  rabbit_service.py
app/db/: mongo.py
app/models/: empresa.py  log.py  mensagem.py  relatorio.py  template.py  whatsapp.py
app/models/empresa/: empresa.py  empresa_request.py  empresa_response.py
app/models/mensagem/: mensagem.py  mensagem_request.py  mensagem_response.py
app/services/: empresa_service.py  evolution_service.py  mensagem_service.py  relatorio_service.py  template_service.py  whatsapp_service.py
app/tasks/: enviar_mensagem_task.py
app/util/: dataclass.py  utils.py
app/workers/: worker_mensagem.py
