[project]
name = "api-brm-whatsapp"
version = "1.0"
description = "Api para comunicação de automação via API com o Whatsapp (Evolution ou Oficial)"
authors = [
    {name = "Tiago Pereira Ramos",email = "tiago@brmsolutions.com.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
