[project]
name = "api-brm-whatsapp"
version = "1.0"
description = "Api para comunicação de automação via API com o Whatsapp (Evolution ou Oficial)"
authors = [
    {name = "Tiago Pereira Ramos",email = "tiago@brmsolutions.com.br"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pymongo (>=4.12.0,<5.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pika (>=1.3.2,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
