[project]
name = "api-brm-whatsapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "celery>=5.5.1",
    "fastapi>=0.115.12",
    "flower>=2.0.1",
    "isort>=6.0.1",
    "loguru>=0.7.3",
    "motor>=3.7.0",
    "pydantic-settings>=2.9.1",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "temporalio>=1.11.0",
    "uvicorn>=0.34.2",
]
[tool.black]
line-length = 100
target-version = ['py39']
